ingress-nginx/ingress-duplicate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-duplicate
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "my-app.mycompany.com"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: myapp
                port:
                  number: 80
