ingress-nginx/ingress-path2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-path2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "my-app-path.mycompany.com"
      http:
        paths:
          - path: "/path2"
            pathType: "Prefix"
            backend:
              service:
                name: myapp
                port:
                  number: 80
